# kubernetesslackbot

./: CMakeLists.txt  hackathonlibrary.hpp  kubernetes.hpp  main.cpp  rules.txt  setup.txt
